--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/xmlconfig/site.config
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/xmlconfig/site.config
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
-<siteconfig xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <webname>DTcms内容管理系统</webname>
+<siteconfig xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+  <webname>活动资源网管理系统</webname>
   <weburl>http://demo.dtcms.net</weburl>
-  <webcompany>深圳市动力启航软件有限公司</webcompany>
-  <webaddress>广东省深圳市宝安区西乡街道</webaddress>
-  <webtel>13800138000</webtel>
+  <webcompany>上海活动资源网</webcompany>
+  <webaddress>上海活动资源网</webaddress>
+  <webtel>18711026570</webtel>
   <webfax>-</webfax>
-  <webmail>info@dtcms.net</webmail>
-  <webcrod>粤ICP备11064298号</webcrod>
+  <webmail />
+  <webcrod />
   <webpath>/</webpath>
   <webmanagepath>admin</webmanagepath>
   <staticstatus>0</staticstatus>
