--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/xmlconfig/site.config
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/xmlconfig/site.config
@@ -46,7 +46,7 @@
   <watermarkimgquality>80</watermarkimgquality>
   <watermarkpic>watermark.png</watermarkpic>
   <watermarktransparency>5</watermarktransparency>
-  <watermarktext>动力启航</watermarktext>
+  <watermarktext>活动资源网</watermarktext>
   <watermarkfont>Tahoma</watermarkfont>
   <watermarkfontsize>12</watermarkfontsize>
   <sysdatabaseprefix>dt_</sysdatabaseprefix>
