--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.BLL/DTcms.BLL.csproj
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.BLL/DTcms.BLL.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="advertisementBll.cs" />
     <Compile Include="article.cs" />
     <Compile Include="article_attach.cs" />
     <Compile Include="article_attribute_field.cs" />
