--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/DTcms.Web.csproj
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/DTcms.Web.csproj
@@ -75,6 +75,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="admin\ad\Edit.aspx" />
+    <Content Include="admin\ad\Index.aspx" />
     <Content Include="admin\article\article_edit.aspx" />
     <Content Include="admin\article\article_list.aspx" />
     <Content Include="admin\article\category_edit.aspx" />
@@ -740,6 +742,20 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="admin\ad\Edit.aspx.cs">
+      <DependentUpon>Edit.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin\ad\Edit.aspx.designer.cs">
+      <DependentUpon>Edit.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\ad\Index.aspx.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin\ad\Index.aspx.designer.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
+    </Compile>
     <Compile Include="admin\article\article_edit.aspx.cs">
       <DependentUpon>article_edit.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
