--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/xmlconfig/site.config
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/xmlconfig/site.config
@@ -27,7 +27,7 @@
   <emailfrom>info@it134.cn</emailfrom>
   <emailusername>info@it134.cn</emailusername>
   <emailpassword>50C215BB3B599960</emailpassword>
-  <emailnickname>动力启航</emailnickname>
+  <emailnickname>活动资源网</emailnickname>
   <filepath>upload</filepath>
   <filesave>2</filesave>
   <fileremote>0</fileremote>
