--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/Web.config
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/Web.config
@@ -10,6 +10,7 @@
   <!-- 数据库连接字符串-->
   <connectionStrings>
     <add name="ConnectionString" connectionString="server=.;uid=sa;pwd=sa123456;database=DTcmsdb4;"/>
+    <!--<add name="ConnectionString" connectionString="server=119.23.36.226;uid=sa;pwd=sa123456;database=DTcmsdb4;"/>-->
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0"/>
