--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.BLL/DTcms.BLL.csproj
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.BLL/DTcms.BLL.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sms_message.cs" />
     <Compile Include="sms_template.cs" />
+    <Compile Include="starexpert.cs" />
     <Compile Include="sys_config.cs" />
     <Compile Include="url_rewrite.cs" />
     <Compile Include="users.cs" />
