--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.DAL/DTcms.DAL.csproj
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.DAL/DTcms.DAL.csproj
@@ -73,6 +73,7 @@
     <Compile Include="plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sms_template.cs" />
+    <Compile Include="starexpert.cs" />
     <Compile Include="sys_config.cs" />
     <Compile Include="url_rewrite.cs" />
     <Compile Include="users.cs" />
