--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Model/DTcms.Model.csproj
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Model/DTcms.Model.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="shopping_cart.cs" />
     <Compile Include="sms_template.cs" />
+    <Compile Include="starexpert.cs" />
     <Compile Include="sys_config.cs" />
     <Compile Include="template.cs" />
     <Compile Include="url_rewrite.cs" />
