--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/DTcms.Web.csproj
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/DTcms.Web.csproj
@@ -498,6 +498,7 @@
     <Content Include="images\oauth\taobao.png" />
     <Content Include="images\oauth\weibo.png" />
     <Content Include="index.aspx" />
+    <Content Include="index1.aspx" />
     <Content Include="scripts\artdialog\dialog-min.js" />
     <Content Include="scripts\artdialog\dialog-plus-min.js" />
     <Content Include="scripts\artdialog\ui-dialog.css" />
@@ -1455,6 +1456,13 @@
     <Compile Include="api\weixin\wx.aspx.designer.cs">
       <DependentUpon>wx.aspx</DependentUpon>
     </Compile>
+    <Compile Include="index1.aspx.cs">
+      <DependentUpon>index1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="index1.aspx.designer.cs">
+      <DependentUpon>index1.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tools\admin_ajax.ashx.cs">
       <DependentUpon>admin_ajax.ashx</DependentUpon>
@@ -1513,6 +1521,13 @@
     <Compile Include="web\OrderPay.aspx.designer.cs">
       <DependentUpon>OrderPay.aspx</DependentUpon>
     </Compile>
+    <Compile Include="web\Right.ascx.cs">
+      <DependentUpon>Right.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="web\Right.ascx.designer.cs">
+      <DependentUpon>Right.ascx</DependentUpon>
+    </Compile>
     <Compile Include="web\SearchResult.aspx.cs">
       <DependentUpon>SearchResult.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -1533,6 +1548,13 @@
     </Compile>
     <Compile Include="web\WebForm1.aspx.designer.cs">
       <DependentUpon>WebForm1.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="web\WebForm2.aspx.cs">
+      <DependentUpon>WebForm2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="web\WebForm2.aspx.designer.cs">
+      <DependentUpon>WebForm2.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -1658,13 +1680,16 @@
     <Content Include="web\Detail.aspx" />
     <Content Include="web\List.aspx" />
     <Content Include="web\OrderPay.aspx" />
+    <Content Include="web\Right.ascx" />
     <Content Include="web\scripts\carousel.js" />
     <Content Include="web\scripts\common.js" />
     <Content Include="web\scripts\jquery-1.11.2.min.js" />
     <Content Include="web\scripts\jquery-3.1.1.min.js" />
+    <Content Include="web\scripts\lunbo.js" />
     <Content Include="web\SearchResult.aspx" />
     <Content Include="web\StarexpertList.aspx" />
     <Content Include="web\WebForm1.aspx" />
+    <Content Include="web\WebForm2.aspx" />
     <Content Include="xmlconfig\site.config" />
     <Content Include="xmlconfig\urls.config" />
   </ItemGroup>
