--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Model/DTcms.Model.csproj
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Model/DTcms.Model.csproj
@@ -66,6 +66,7 @@
     <Compile Include="channel_field.cs" />
     <Compile Include="channel_site.cs" />
     <Compile Include="express.cs" />
+    <Compile Include="hotsearch.cs" />
     <Compile Include="mail_template.cs" />
     <Compile Include="manager.cs" />
     <Compile Include="manager_log.cs" />
