--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.DAL/DTcms.DAL.csproj
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.DAL/DTcms.DAL.csproj
@@ -62,6 +62,7 @@
     <Compile Include="channel.cs" />
     <Compile Include="channel_site.cs" />
     <Compile Include="express.cs" />
+    <Compile Include="hotsearch.cs" />
     <Compile Include="mail_template.cs" />
     <Compile Include="manager.cs" />
     <Compile Include="manager_log.cs" />
