--- a/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/xmlconfig/site.config
+++ b/dtcms4.0/DTcms_4.0_sql_src_Ultimate/DTcms.Web/xmlconfig/site.config
@@ -24,9 +24,9 @@
   <emailsmtp>smtp.qq.com</emailsmtp>
   <emailssl>1</emailssl>
   <emailport>25</emailport>
-  <emailfrom>info@it134.cn</emailfrom>
-  <emailusername>info@it134.cn</emailusername>
-  <emailpassword>50C215BB3B599960</emailpassword>
+  <emailfrom>125394665@qq.com</emailfrom>
+  <emailusername>125394665@qq.com</emailusername>
+  <emailpassword>3DC49248871D3086770DAA9688B45BF0</emailpassword>
   <emailnickname>活动资源网</emailnickname>
   <filepath>upload</filepath>
   <filesave>2</filesave>
